kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
    - grafana.ringbell.cc
  parentRefs:
    - name: external
      namespace: networking
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  hostnames:
    - prometheus.ringbell.cc
  parentRefs:
    - name: external
      namespace: networking
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
